--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "doctrine/dbal": "^2.9"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "symplify/easy-coding-standard": "^7.2",
+        "phpstan/phpstan": "^0.12.5",
+        "vimeo/psalm": "^3.8"
     },
     "autoload": {
         "psr-4": {
