--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "phpunit/phpunit": "^8.5",
         "symplify/easy-coding-standard": "^7.2",
         "phpstan/phpstan": "^0.12.5",
-        "vimeo/psalm": "^3.8"
+        "vimeo/psalm": "^3.8",
+        "php-coveralls/php-coveralls": "^2.2"
     },
     "autoload": {
         "psr-4": {
