--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ script:
 
 after_success:
   - source bin/params
-  - travis_retry docker-compose exec -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" -e TRAVIS="$TRAVIS" $PHP_SERVICE vendor/bin/php-coveralls -v
+  - docker-compose run --rm -e TRAVIS_JOB_ID="$TRAVIS_JOB_ID" -e TRAVIS_BRANCH="$TRAVIS_BRANCH" -e TRAVIS="$TRAVIS" $PHP_SERVICE vendor/bin/php-coveralls -v
