--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-
 services:
   - docker
 
@@ -21,6 +20,7 @@ install:
 
 script:
   - bin/tests/unit-tests
+  - bin/tests/functional-tests
 
 after_success:
   - source bin/params
