--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - DATABASE_PORT=${DATABASE_PORT}
     links:
       - postgres-9
+      - postgres-10
+      - postgres-11
+      - postgres-12
 
   php-7.3:
     build: docker/php/php-7.3
@@ -29,6 +32,9 @@ services:
       - DATABASE_PORT=${DATABASE_PORT}
     links:
       - postgres-9
+      - postgres-10
+      - postgres-11
+      - postgres-12
 
   php-7.4:
     build: docker/php/php-7.4
@@ -44,6 +50,9 @@ services:
       - DATABASE_PORT=${DATABASE_PORT}
     links:
       - postgres-9
+      - postgres-10
+      - postgres-11
+      - postgres-12
 
   postgres-9:
     image: postgres:9
@@ -59,7 +68,29 @@ services:
   postgres-10:
     image: postgres:10
     ports:
-      - "5432:5432"
+      - "5433:5432"
+    environment:
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_DB=${DATABASE_NAME}
+    volumes:
+      - ./docker/postgres/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+
+  postgres-11:
+    image: postgres:11
+    ports:
+      - "5434:5432"
+    environment:
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_DB=${DATABASE_NAME}
+    volumes:
+      - ./docker/postgres/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+
+  postgres-12:
+    image: postgres:12
+    ports:
+      - "5435:5432"
     environment:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_USER=${DATABASE_USER}
