--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,3 +97,17 @@ services:
       - POSTGRES_DB=${DATABASE_NAME}
     volumes:
       - ./docker/postgres/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+  
+  mysql-8:
+    image: mysql:8
+    command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_PASSWORD=${DATABASE_PASSWORD}
+      - MYSQL_USER=${DATABASE_USER}
+      - MYSQL_DATABASE=${DATABASE_NAME}
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - ./docker/mysql/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+
