--- a/docker/php/php-7.2/Dockerfile
+++ b/docker/php/php-7.2/Dockerfile
@@ -4,7 +4,8 @@ RUN pecl install xdebug && docker-php-ext-enable xdebug
 
 RUN apt-get update && apt-get install -y git wget zip libpq-dev
 
-RUN docker-php-ext-install pdo pdo_pgsql pgsql
+RUN docker-php-ext-install pdo pdo_pgsql
+RUN docker-php-ext-install pdo_mysql
 
 RUN wget https://getcomposer.org/composer.phar && mv composer.phar /usr/bin/composer && chmod +x /usr/bin/composer
 
