--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
         run: bin/install
 
       - name: Run unit tests
-        run: bin/unit-tests
+        run: bin/tests/unit-tests
 
       - name: Run functional tests
-        run: bin/functional-tests
+        run: bin/tests/functional-tests
 
       - name: Send code coverage report
         run: |
