--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Send code coverage report
         run: |
           bin/params
-          docker-compose run --rm $PHP_SERVICE vendor/bin/php-coveralls -v
+          docker-compose run --rm $PHP_SERVICE "composer global require php-coveralls/php-coveralls && vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v"
 
