--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
-          bin/params
+          source bin/params
           docker-compose run --rm $PHP_SERVICE "composer global require php-coveralls/php-coveralls && vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v"
 
