--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
-          docker-compose run -T --rm $PHP_SERVICE "composer global require php-coveralls/php-coveralls && vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v"
+          docker-compose run -T --rm -e COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }} $PHP_SERVICE "composer global require php-coveralls/php-coveralls && vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v"
 
